// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion. WHEN: migrate Lambda to Functions, migrate AWS to Azure, migrate Beanstalk to App Service, migrate Heroku to Azure, migrate App Engine to Azure, migrate Cloud Run to Container Apps, migrate ECS to Container Apps, cross-cloud migration, migration readiness report.",
  "extractedKeywords": [
    "app service",
    "apps",
    "assess",
    "azure",
    "beanstalk",
    "cloud",
    "code",
    "container",
    "conversion",
    "cross-cloud",
    "deploy",
    "engine",
    "function",
    "functions",
    "heroku",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "report",
    "reports",
    "service",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "apps",
  "assess",
  "azure",
  "beanstalk",
  "cloud",
  "code",
  "container",
  "conversion",
  "cross-cloud",
  "deploy",
  "engine",
  "function",
  "functions",
  "heroku",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "report",
  "reports",
  "service",
  "when",
  "with",
  "workloads",
]
`;
